# investment-retrieval-information

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  scweet_state.db
.opencode/: TEMPLATE.md
.opencode/skills/changelog-entry-skill/: SKILL.md
.opencode/skills/fix/: SKILL.md
.opencode/skills/investment-research/: SKILL.md
.opencode/skills/kanban-update-skill/: SKILL.md
.opencode/skills/memory-write-skill/: SKILL.md
.opencode/skills/new-doc/: SKILL.md
.opencode/skills/plan-review-skill/: SKILL.md
.opencode/skills/project-init-skill/: SKILL.md
.opencode/skills/project-onboard/: SKILL.md
.opencode/skills/refactor/: SKILL.md
.opencode/skills/review/: SKILL.md
.opencode/skills/session-start/: SKILL.md
.opencode/skills/update-docs/: SKILL.md
.opencode/skills/vault-search-skill/: SKILL.md
.opencode/templates/: USAGE.md
.opencode/templates/architecture/: _index.md
config/: companies.example.json  enrichment.example.json  fx.example.json  sources.example.json  watched_accounts.json
docs/: _index.md  decision-index.md  feature-map.md
docs/architecture/: _index.md
docs/features/: _index.md
scripts/: run_pipeline.py  scweet_smoke_test.py
src/ai_equity_discovery/: __init__.py  __main__.py  cli.py  scheduler.py
tests/: test_config.py  test_enrichment_layered.py  test_enrichment_parsing.py  test_enrichment_policy.py  test_extraction_service.py  test_ingestion_providers.py  test_ingestion_service.py  test_loaders.py  test_pipeline.py  test_reporting_markdown.py  test_scheduler.py  test_web_provider.py
(+54 files in other folders)
